@@ -1284,45 +1284,51 @@
     },
     {
         "domain": "BrowserDebugger",
-        "types": [],
+        "description": "Browser debugging allows setting breakpoints on particular DOM operations and events. JavaScript execution will stop on these operations as if there was a regular breakpoint set.",
         "commands": [
             {
                 "name": "setDOMBreakpoint",
                 "parameters": [
-                    { "name": "nodeId", "type": "integer" },
-                    { "name": "type", "type": "integer" }
-                ]
+                    { "name": "nodeId", "type": "integer", "description": "Identifier of the node to set breakpoint on." },
+                    { "name": "type", "type": "integer", "description": "Type of the operation to stop upon." }
+                ],
+                "description": "Sets breakpoint on particular operation with DOM. "
             },
             {
                 "name": "removeDOMBreakpoint",
                 "parameters": [
-                    { "name": "nodeId", "type": "integer" },
-                    { "name": "type", "type": "integer" }
-                ]
+                    { "name": "nodeId", "type": "integer", "description": "Identifier of the node to remove breakpoint from." },
+                    { "name": "type", "type": "integer", "description": "Type of the breakpoint to remove." }
+                ],
+                "description": "Removes DOM breakpoint that was set using <code>setDOMBreakpoint</code>."
             },
             {
                 "name": "setEventListenerBreakpoint",
                 "parameters": [
-                    { "name": "eventName", "type": "string" }
-                ]
+                    { "name": "eventName", "type": "string", "description": "Event name to stop on (any DOM event will do)." }
+                ],
+                "description": "Sets breakpoint on particular DOM event."
             },
             {
                 "name": "removeEventListenerBreakpoint",
                 "parameters": [
-                    { "name": "eventName", "type": "string" }
-                ]
+                    { "name": "eventName", "type": "string", "description": "Event name." }
+                ],
+                "description": "Removes breakpoint on particular DOM event."
             },
             {
                 "name": "setXHRBreakpoint",
                 "parameters": [
-                    { "name": "url", "type": "string" }
-                ]
+                    { "name": "url", "type": "string", "description": "Resource URL substring. All XHRs having this substring in the URL will get stopped upon." }
+                ],
+                "description": "Sets breakpoint on XMLHttpRequest."
             },
             {
                 "name": "removeXHRBreakpoint",
                 "parameters": [
-                    { "name": "url", "type": "string" }
-                ]
+                    { "name": "url", "type": "string", "description": "Resource URL substring." }
+                ],
+                "description": "Removes breakpoint from XMLHttpRequest."
             }
         ]
     },
