@@ -1,3 +1,12 @@
+2011-03-29  Pavel Feldman  <pfeldman@chromium.org>
+
+        Reviewed by Yury Semikhatsky.
+
+        Web Inspector: document BrowserDebugger agent.
+        https://bugs.webkit.org/show_bug.cgi?id=57331
+
+        * inspector/Inspector.json:
+
 2011-03-29  Alexander Pavlov  <apavlov@chromium.org>
 
         Reviewed by Pavel Feldman.
